# cv

./: .dockerignore  .gitignore  =1.18.1  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTEXT.md  Dockerfile.test  README.md  ROADMAP.md  __sym.txt  _tmp_segment.txt  apply_clean_patch.py  apply_clean_patch_v2.py  apply_clean_patch_v3.py  build_cli.bat  build_va_log.txt  code.html  configure_va_nv.bat  conftest.py  debug_trace.json  dump_rest_impl.hpp.txt  finalize_patch.py  find_imports.py  fix_api_server.py  fix_api_server_v10.py  fix_api_server_v2.py  fix_api_server_v8.py  fix_api_server_v9.py  fix_encoding.py  fix_syntax_final.py  fix_tokenizer_import.py  generate_data.py  insert_data.sql  insert_data_2y.sql  logs_dump.txt  logs_dump_2.txt  m_before.txt  models.json  offer.sdp  (+43 more)
agent-audit/: README.md  pyproject.toml
agent-audit/agent_audit/: __init__.py  emitter.py  worker.py
agent-audit/agent_audit/instrumentation/: __init__.py  langchain.py  langgraph.py
agent-cli/: pyproject.toml
agent-cli/agent_cli/: main.py
agent-core/: pyproject.toml
agent-core/agent_core/: __init__.py  audit.py  base.py  decorators.py  events.py  filesystem.py  middleware.py  observability.py  runtime.py  settings.py  state.py  store.py  tool_patterns.py
agent-core/agent_core/workers/: audit.py
agent-core/tests/: test_audit.py  test_audit_worker.py  test_hitl.py  test_observability.py  test_stability.py
agent-test/: pyproject.toml  pytest.ini
agent-test/agent_test/: __init__.py  evaluators.py  fixtures.py  mocks.py
controlplain/: CMakeLists.txt
controlplain/config/: app.yaml
controlplain/include/controlplain/: config.hpp
controlplain/src/server/: config.cpp  grpc_clients.cpp  main.cpp
controlplane/: CMakeLists.txt
controlplane/config/: app.tls.mtls.sample.yaml  app.yaml
controlplane/config-auth/: app.yaml
controlplane/config-badca/: app.yaml
controlplane/config-mtls-probe/: app.yaml
controlplane/config-notls/: app.yaml
controlplane/config/certs/: vsm_server.key
controlplane/config/smoke/: app.yaml
controlplane/include/controlplane/: cache.hpp  circuit_breaker.hpp  config.hpp  db.hpp  events.hpp  grpc_clients.hpp  http_proxy.hpp  http_server.hpp  logging.hpp  manifest.hpp  metrics.hpp  sse_utils.hpp  store.hpp  watch_adapter.hpp
controlplane/src/cli/: va_release.cpp  va_repo.cpp  va_set_engine.cpp
controlplane/src/server/: cache.cpp  circuit_breaker.cpp  config.cpp  db.cpp  grpc_clients.cpp  http_proxy.cpp  http_server.cpp  logging.cpp  main.cpp  manifest.cpp  metrics.cpp  store.cpp  watch_adapter.cpp
controlplane/test/scripts/: _tmp.ps1  check_cp_json_negative.py  check_cp_min_api_once.py  check_cp_orch_attach_apply.py  check_cp_orch_detach_remove.py  check_cp_orch_health.py  check_cp_sources_attach_detach.py  check_cp_sources_enable_disable.py  check_cp_sources_watch_sse.py  check_cp_sse_concurrency.py  check_cp_sse_fake.py  check_cp_sse_placeholder.py  check_cp_sse_watch.py  check_cp_system_info.py  convert_upload_cli.py  run_fake_watch_smoke.py  smoke_fake_sse_concurrency.ps1  smoke_fake_watch.ps1  smoke_orch_apply_negative_v2.ps1  smoke_orch_idempotent.ps1  smoke_orch_positive_flow.ps1  smoke_security_negative.ps1  soak_cp_sse_watch.py  test_subscribe_triton_repo_model.py
lro/: CMakeLists.txt  README.md  lroConfig.cmake.in
lro/adapters/grpc/: lro.proto  server.cpp
lro/adapters/rest_simplehttpserver/: routes.cpp
lro/examples/grpc_server/: main.cpp
lro/examples/rest_server/: main.cpp
lro/include/lro/: admission.h  executors.h  metrics.h  metrics.hpp  notifier.h  notifier.hpp  operation.h  reason.h  reason.hpp  retry_estimator.h  runner.h  runner.hpp  state_store.h  state_store.hpp  status.h
lro/src/lro/: executors.cpp  runner.cpp  state_store_mem.cpp
lro/tests/: CMakeLists.txt  test_min.cpp
video-analyzer/: CMakeLists.txt
video-analyzer/build-ninja/: .ninja_deps  .ninja_log  build.ninja
video-analyzer/build-ninja/yaml-cpp/: DartConfiguration.tcl  cmake_uninstall.cmake  yaml-cpp.pc
video-analyzer/config/: app.m2-gray.sample.yaml  app.yaml  models.yaml  profiles.yaml
video-analyzer/config/certs/: ca.srl  cp_client.key  openssl-san.cnf  va_client.crt  va_client.key  va_server.crt
video-analyzer/config/graphs/: analyzer_multistage_example.yaml  analyzer_multistage_kpt.yaml  analyzer_multistage_roi_cls.yaml  analyzer_multistage_triton.yaml
video-analyzer/proto/: analyzer_control.proto  pipeline.proto  whep_control.proto
video-analyzer/src/: ConfigLoader.cpp  ConfigLoader.hpp  composition_root.cpp  composition_root.hpp  main.cpp
video-analyzer/src/analyzer/: analyzer.cpp  analyzer.hpp  interfaces.hpp  load_metrics.cpp  load_metrics.hpp  logging_util.hpp  model_registry.cpp  model_registry.hpp  model_session_factory.cpp  model_session_factory.hpp  ort_session.cpp  ort_session.hpp  postproc_detr.cpp  postproc_detr.hpp  postproc_yolo_det.cpp  postproc_yolo_det.hpp  postproc_yolo_seg.cpp  postproc_yolo_seg.hpp  preproc_letterbox_cpu.cpp  preproc_letterbox_cpu.hpp  preproc_letterbox_cuda.cpp  preproc_letterbox_cuda.cu  preproc_letterbox_cuda.hpp  renderer_overlay_cpu.cpp  renderer_overlay_cpu.hpp  renderer_overlay_cuda.cpp  renderer_overlay_cuda.hpp  renderer_passthrough.cpp  renderer_passthrough.hpp  triton_inproc_server_host.cpp  triton_inproc_server_host.hpp  triton_inproc_session.cpp  triton_inproc_session.hpp  triton_metrics.cpp  triton_metrics.hpp  triton_session.cpp  triton_session.hpp  trt_session.cpp  trt_session.hpp
video-analyzer/src/app/: application.cpp  application.hpp
video-analyzer/src/control_plane_embedded/: interfaces.hpp
video-analyzer/src/controlplane/: interfaces.hpp
video-analyzer/src/core/: buffer_pool.cpp  buffer_pool.hpp  codec_registry.cpp  codec_registry.hpp  cuda_tls.hpp  drop_metrics.cpp  (+26 more)
video-analyzer/test/: auto_test_matrix.py  auto_test_pipeline.py
video-analyzer/tools/: nvcc_wrap.py
video-source-manager/: CMakeLists.txt  README.md  build_vsm.bat
video-source-manager/config/: README.md  app.yaml
video-source-manager/proto/: source_control.proto
video-source-manager/src/: main.cpp
(+3338 files in other folders)
