[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "agent-cli"
version = "0.1.0"
description = "CLI tool for generating and managing Agent Plugins"
authors = [{name = "Agent Platform Team"}]
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0"
]

[project.scripts]
agent-cli = "agent_cli.main:app"
