[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "agent-test"
version = "0.1.0"
description = "Testing utilities for LangGraph Agents"
authors = [{name = "Agent Platform Team"}]
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0.0",
    "pytest-recording>=0.13.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.10",
    "agentevals>=0.0.1"
]

[project.optional-dependencies]
dev = ["black", "isort"]
